syntax = "proto3";

package communities.v1;
option go_package = "github.com/samouraiworld/zenao/backend/communities/v1;communities";

message CommunityInfo {
  string display_name = 1;
  string description = 2;
  string avatar_uri = 3;
  string banner_uri = 4;
  string creator = 5;
  repeated string administrators = 6;
  uint32 count_members = 7;
  string pkg_path = 8;
}

message CreateCommunityRequest {
  string DisplayName = 1;
  string Description = 2;
  string AvatarURI = 3;
  string BannerURI = 4;
  repeated string administrators = 5;
}

message CreateCommunityResponse { string community_id = 1; }